@@ -1,5 +1,5 @@
 readme.500
-08/05/2014
+09/10/2014
 
 
 WWIV 5.0 Getting Started
@@ -45,8 +45,6 @@ referred to below and may also only use portions of a given component.
 
 Here is a list of the third party open source components included with
 WWIV:
-===============================================================================
-** INFOZIP ZIP3.0/UNZIP6.0 (zip.exe/unzip.exe)
 
 ===============================================================================
 ** INFOZIP ZIP3.0/UNZIP6.0 (zip.exe/unzip.exe)
